Suppression de la led independante

--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,4 @@ debug = true
     KEYPAD = 7
     KEYPAD_GREEN_LED = 8
     KEYPAD_RED_LED = 9
-    KEYPAD_DEAD = 10
-    LED = 11
-    LED_DEAD = 12
+    KEYPAD_ALIVE = 10
